--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ Hello there, awesome person!
 
   <body>
 <h1>I'm a header 1!</h1>
-    Hello there, awesome person! 
+<img src="https://avatars.githubusercontent.com/u/13513949?v=4">
+
   </body>
 </html>
