--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ Hello there, awesome person!
     </head>
 
   <body>
-    <h1>I'm a header 1!</h1>
+      <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
     <img src="https://avatars.githubusercontent.com/u/13513949?v=4">
        <ol>
            <li>Git Hub</li>
